--- a/css/style.css
+++ b/css/style.css
@@ -225,9 +225,6 @@ input[type='submit']:hover{
         width: 90%;
        
     }
-    .intro{
-        
-    }
     .intro h2{
        text-align: center;
     }
@@ -242,6 +239,13 @@ input[type='submit']:hover{
     .r1{
         width: 300px;
     }
-    
-  
+}
+
+@media screen and (max-width: 360px){
+    .header1{
+        display: block;
+    }
+    .redes-sociais i:first-child{
+        padding-left: 0;
+    }
 }
