--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,32 @@ input[type='submit']:hover{
         padding-left: 0;
     }
 }
+@media only screen and (-webkit-min-device-pixel-ratio: 2.75) {
+    /* CSS */
+    .center{
+        overflow-x: hidden;
+        width: 90%; 
+     }
+     main{
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         width: 90%;
+        
+     }
+     .intro h2{
+        text-align: center;
+     }
+     .intro p{
+        
+       font-size: 13px;  
+         line-height: 15px;
+     }
+     .intro img{
+         display: none;
+     }
+     .r1{
+         width: 300px;
+     }
+
+}
